--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,24 @@
 version: "3.9"
+
 services:
   backend:
-    build: ./backend
+    build:
+      context: ./backend
     container_name: consent-backend
     ports:
       - "8000:8000"
-    volumes:
-      - backend_db:/app/app
-    environment:
-      - PYTHONUNBUFFERED=1
+    networks:
+      - consent-net
 
   frontend:
     build:
       context: ./frontend/consent-frontend
-      dockerfile: Dockerfile
     container_name: consent-frontend
     ports:
-      - "5173:5173"
-    depends_on:
-      - backend
+      - "5173:80"
+    networks:
+      - consent-net
 
-volumes:
-  backend_db:
+networks:
+  consent-net:
+    driver: bridge
